app/javascript/styles/mastodon/components.scss
/* ... */
.onboarding-modal,
.error-modal,
.embed-modal {
  background: $ui-secondary-color;
  color: $inverted-text-color;
  border-radius: 8px;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.error-modal__body {
  height: 80vh;
  width: 80vw;
  max-width: 520px;
  max-height: 420px;
  position: relative;

  & > div {
    position: absolute;
    top: 0;
    inset-inline-start: 0;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    padding: 25px;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    display: flex;
    opacity: 0;
    user-select: text;
  }
}

.error-modal__body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.onboarding-modal__paginator,
.error-modal__footer {
  flex: 0 0 auto;
  background: darken($ui-secondary-color, 8%);
  display: flex;
  padding: 25px;

  & > div {
    min-width: 33px;
  }

  .onboarding-modal__nav,
  .error-modal__nav {
    color: $lighter-text-color;
    border: 0;
    font-size: 14px;
    font-weight: 500;
    padding: 10px 25px;
    line-height: inherit;
    height: auto;
    margin: -10px;
    border-radius: 4px;
    background-color: transparent;

    &:hover,
    &:focus,
    &:active {
      color: darken($lighter-text-color, 4%);
      background-color: darken($ui-secondary-color, 16%);
    }

    &.onboarding-modal__done,
    &.onboarding-modal__next {
      color: $inverted-text-color;

      &:hover,
      &:focus,
      &:active {
        color: lighten($inverted-text-color, 4%);
      }
    }
  }
}

.error-modal__footer {
  justify-content: center;
}

.display-case {
  text-align: center;
  font-size: 15px;
  margin-bottom: 15px;

  &__label {
    font-weight: 500;
    color: $inverted-text-color;
    margin-bottom: 5px;
    text-transform: uppercase;
    font-size: 12px;
  }

  &__case {
    background: $ui-base-color;
    color: $secondary-text-color;
    font-weight: 500;
    padding: 10px;
    border-radius: 4px;
  }
}

.onboard-sliders {
  display: inline-block;
  max-width: 30px;
  max-height: auto;
  margin-inline-start: 10px;
}

.safety-action-modal {
  width: 600px;
  flex-direction: column;

  &__top,
  &__bottom {
    display: flex;
    gap: 8px;
    padding: 24px;
    flex-direction: column;
    background: var(--modal-background-color);
    backdrop-filter: var(--background-filter);
    border: 1px solid var(--modal-border-color);
  }

  &__top {
    border-radius: 16px 16px 0 0;
    border-bottom: 0;
    gap: 16px;
  }

  &__bottom {
    border-radius: 0 0 16px 16px;
    border-top: 0;

    @media screen and (max-width: $mobile-breakpoint) {
      border-radius: 0;
      border-bottom: 0;
      padding-bottom: 32px;
    }
  }

  &__header {
    display: flex;
    gap: 16px;
    align-items: center;
    font-size: 14px;
    line-height: 20px;
    color: $darker-text-color;

    &__icon {
      border-radius: 64px;
      background: $ui-highlight-color;
      color: $white;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 40px;
      height: 40px;
      flex-shrink: 0;

      .icon {
        width: 24px;
        height: 24px;
      }
    }

    h1 {
      font-size: 22px;
      line-height: 28px;
      color: $primary-text-color;
    }
  }

  &__confirmation {
    font-size: 14px;
    line-height: 20px;
    color: $darker-text-color;

    h1 {
      font-size: 16px;
      line-height: 24px;
      color: $primary-text-color;
      font-weight: 500;
      margin-bottom: 8px;
    }

    strong {
      font-weight: 700;
      color: $primary-text-color;
    }
  }

  &__bullet-points {
    display: flex;
    flex-direction: column;
    gap: 8px;
    font-size: 16px;
    line-height: 24px;

    & > div {
      display: flex;
      gap: 16px;
      align-items: center;
    }

    &__icon {
      width: 40px;
      height: 40px;
      display: flex;
      align-items: center;
      justify-content: center;
      flex-shrink: 0;

      .icon {
        width: 24px;
        height: 24px;
      }
    }
  }

  &__field-group {
    display: flex;
    flex-direction: column;

    label {
      display: flex;
      gap: 16px;
      align-items: center;
      font-size: 16px;
      line-height: 24px;
      height: 32px;
      padding: 0 12px;
    }
  }

  &__caveats {
    font-size: 14px;
    padding: 0 12px;

    strong {
      font-weight: 500;
    }
  }

  &__bottom {
    padding-top: 0;

    &__collapsible {
      display: none;
      flex-direction: column;
      gap: 16px;
    }

    &.active {
      background: var(--modal-background-variant-color);
      padding-top: 24px;

      .safety-action-modal__bottom__collapsible {
        display: flex;
      }
    }
  }

  &__actions {
    display: flex;
    align-items: center;
    gap: 8px;
    justify-content: flex-end;

    .link-button {
      padding: 10px 12px;
      font-weight: 600;
    }
  }
}

.boost-modal,
.report-modal,
.actions-modal,
.compare-history-modal {
  background: lighten($ui-secondary-color, 8%);
  color: $inverted-text-color;
  border-radius: 8px;
  overflow: hidden;
  max-width: 90vw;
  width: 480px;
  position: relative;
  flex-direction: column;
}

.boost-modal__container {
  overflow-x: scroll;
  padding: 10px;

  .status {
    user-select: text;
    border-bottom: 0;
  }
}

.boost-modal__action-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: $ui-secondary-color;
  padding: 15px;

  & > div {
    flex: 1 1 auto;
    text-align: end;
    color: $lighter-text-color;
    padding-inline-end: 10px;
  }

  .icon {
    vertical-align: middle;
  }

  .button {
    flex: 0 0 auto;
  }
}

.report-modal {
  width: 90vw;
  max-width: 700px;
}
/* ... */

